<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/sell_msg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="List an Item"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:textSize="30dp"
        android:textColor="#fc0303">
    </TextView>

    <!-- Item name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item Name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp" >
        </TextView>

        <EditText
            android:id="@+id/sell_item_name_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-medium"
            android:hint="Enter the name of the item" >
        </EditText>
    </LinearLayout>

    <!-- Item Price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp" >
        </TextView>

        <EditText
            android:id="@+id/sell_price_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-medium"
            android:hint="Enter price" />
    </LinearLayout>

    <!-- Item Description -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginBottom="8dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/sell_description_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter item description"
            android:maxWidth="250dp" />

    </LinearLayout>

    <!-- Item Quantity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quantity"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/sell_quantity_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="number"
            android:hint="Enter quantity"
            android:maxWidth="150dp" />

    </LinearLayout>

    <!-- Submit Btn -->
    <Button
        android:id="@+id/sell_submit_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Submit"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:backgroundTint="#C8102E"
        android:layout_marginBottom="16dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>

    <!-- back btn -->
    <Button
        android:id="@+id/sell_back_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Back"
        android:textSize="20sp"
        android:textColor="#ffffff">
    </Button>





</androidx.appcompat.widget.LinearLayoutCompat>